--- a/prueba.html
+++ b/prueba.html
@@ -103,7 +103,7 @@
             
                 <div class="mb-4">
                     <button class="bg-gray-800 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline w-full flex justify-between items-center" onclick="toggleAccordion('matches-group-3', 'arrow-matches-3')">
-                        Moodbar
+                        Moodboard
                         <svg class="w-4 h-4 fill-current text-white transform transition-transform" id="arrow-matches-3" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd" /></svg>
                     </button>
                     <div id="matches-group-3" class="bg-gray-700 rounded-md shadow-inner mt-2 p-4 hidden grid grid-cols-3 gap-4">
